force-app/main/default/objects/Loan__c/fields/Account_Name__c.field-meta.xml
<CustomField>
    <fullName>Account_Name__c</fullName>
    <formula>RW_Opportunity__r.Account.FirstName + &apos; &apos; +  RW_Opportunity__r.Account.LastName</formula>
    <label>Account Name</label>
    <type>Text</type>
</CustomField>