force-app/main/default/objects/Loan__c/fields/APF_Number__c.field-meta.xml
<CustomField>
    <fullName>APF_Number__c</fullName>
    <formula>RW_APF__r.APF_Number__c</formula>
    <label>APF Number</label>
    <type>Text</type>
</CustomField>