force-app/main/default/objects/Loan__c/fields/Balance_Connector_Fee__c.field-meta.xml
<CustomField>
    <fullName>Balance_Connector_Fee__c</fullName>
    <formula>Connector_Fee__c -  Connector_Fee_Received__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Balance Connector Fee</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>