force-app/main/default/objects/Loan__c/fields/Bank_Address_NOC__c.field-meta.xml
<CustomField>
    <fullName>Bank_Address_NOC__c</fullName>
    <label>Bank Address - NOC</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>