force-app/main/default/objects/Loan__c/fields/Call_Comments__c.field-meta.xml
<CustomField>
    <fullName>Call_Comments__c</fullName>
    <label>Call Comments</label>
    <length>255</length>
    <type>Text</type>
</CustomField>