force-app/main/default/objects/Loan__c/fields/Connector_Code__c.field-meta.xml
<CustomField>
    <fullName>Connector_Code__c</fullName>
    <label>Connector Code</label>
    <length>30</length>
    <type>Text</type>
</CustomField>