force-app/main/default/objects/Loan__c/fields/Connector_Fee__c.field-meta.xml
<CustomField>
    <fullName>Connector_Fee__c</fullName>
    <formula>IF(  RW_APF__c != null &amp;&amp; ISPICKVAL(Home_Loan_Taken_From__c, &quot;Runwal&quot;) , RW_APF__r.Connector_Fee__c  *  RW_Sanction_Amount__c, 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Connector Fee</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>