force-app/main/default/objects/Loan__c/fields/Connector_Fee_Received__c.field-meta.xml
<CustomField>
    <fullName>Connector_Fee_Received__c</fullName>
    <label>Connector Fee Received</label>
    <summarizedField>Loan_Disbursement_Details__c.Amount_Received__c</summarizedField>
    <summaryForeignKey>Loan_Disbursement_Details__c.Loan__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>