force-app/main/default/objects/Loan__c/fields/Connector_Fee_with_GST__c.field-meta.xml
<CustomField>
    <fullName>Connector_Fee_with_GST__c</fullName>
    <label>Connector Fee with GST</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>