force-app/main/default/objects/Loan__c/fields/Disbursed_Connector_Fee__c.field-meta.xml
<CustomField>
    <fullName>Disbursed_Connector_Fee__c</fullName>
    <label>Disbursed Connector Fee</label>
    <summarizedField>Loan_Disbursement_Details__c.Connector_Fee__c</summarizedField>
    <summaryForeignKey>Loan_Disbursement_Details__c.Loan__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>