force-app/main/default/objects/Loan__c/fields/Final_Sanction_Amount__c.field-meta.xml
<CustomField>
    <fullName>Final_Sanction_Amount__c</fullName>
    <label>Final Sanction Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>