force-app/main/default/objects/Loan__c/fields/First_Call_Attempt_Status__c.field-meta.xml
<CustomField>
    <fullName>First_Call_Attempt_Status__c</fullName>
    <label>First Call Attempt Status</label>
    <type>TextArea</type>
</CustomField>