force-app/main/default/objects/Loan__c/fields/First_Disbursement_Follow_Up_Date__c.field-meta.xml
<CustomField>
    <fullName>First_Disbursement_Follow_Up_Date__c</fullName>
    <label>First Disbursement Follow Up Date</label>
    <type>DateTime</type>
</CustomField>