force-app/main/default/objects/Loan__c/fields/First_Disbursement_Remarks__c.field-meta.xml
<CustomField>
    <fullName>First_Disbursement_Remarks__c</fullName>
    <label>First Disbursement Remarks</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>