force-app/main/default/objects/Loan__c/fields/First_Disbursement_sub_status__c.field-meta.xml
<CustomField>
    <fullName>First_Disbursement_sub_status__c</fullName>
    <label>First Disbursement sub-status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Agreement Received</fullName>
            </value>
            <value>
                <fullName>Agreement with Customer</fullName>
            </value>
            <value>
                <fullName>Agreement with vendor</fullName>
            </value>
            <value>
                <fullName>Awaiting Agreement</fullName>
            </value>
            <value>
                <fullName>Awaiting Sanction</fullName>
            </value>
            <value>
                <fullName>Disbursed</fullName>
            </value>
            <value>
                <fullName>Docket Submitted to Bank</fullName>
            </value>
            <value>
                <fullName>Docket with Customer</fullName>
            </value>
            <value>
                <fullName>Fund Transfer</fullName>
            </value>
            <value>
                <fullName>GST/TDS Pending/Other Charges</fullName>
            </value>
            <value>
                <fullName>Legal &amp; Technical</fullName>
            </value>
            <value>
                <fullName>Login For Disbursement</fullName>
            </value>
            <value>
                <fullName>Management Deviation</fullName>
            </value>
            <value>
                <fullName>Medical / Hospitalization / Covid 19/Death</fullName>
            </value>
            <value>
                <fullName>NOC Done</fullName>
            </value>
            <value>
                <fullName>NOC Pending</fullName>
            </value>
            <value>
                <fullName>No Dues</fullName>
            </value>
            <value>
                <fullName>OCR Shortfall</fullName>
            </value>
            <value>
                <fullName>Out of Station</fullName>
            </value>
            <value>
                <fullName>Part Disbursement</fullName>
            </value>
            <value>
                <fullName>Partially Disbursed</fullName>
            </value>
            <value>
                <fullName>Partially Disbursed - Technical Issue</fullName>
            </value>
            <value>
                <fullName>Partially Self Funding</fullName>
            </value>
            <value>
                <fullName>Pendency from Runwal</fullName>
            </value>
            <value>
                <fullName>Ready Docket in Office</fullName>
            </value>
            <value>
                <fullName>Ready for Disbursement</fullName>
            </value>
            <value>
                <fullName>Rectification Deed</fullName>
            </value>
            <value>
                <fullName>ROC Pending</fullName>
            </value>
            <value>
                <fullName>Salary/Job/Business Loss/Job Change</fullName>
            </value>
            <value>
                <fullName>Sap Entry Pending</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>