force-app/main/default/objects/Loan__c/fields/HL_Reporting_1_Email__c.field-meta.xml
<CustomField>
    <fullName>HL_Reporting_1_Email__c</fullName>
    <label>HL Reporting 1 Email</label>
    <type>Email</type>
</CustomField>