force-app/main/default/objects/Loan__c/fields/HL_RM__c.field-meta.xml
<CustomField>
    <fullName>HL_RM__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>HL RM</label>
    <referenceTo>Home_Loan_RM__c</referenceTo>
    <relationshipLabel>Loans</relationshipLabel>
    <relationshipName>Loans</relationshipName>
    <type>Lookup</type>
</CustomField>