force-app/main/default/objects/Loan__c/fields/HL_RM_Name__c.field-meta.xml
<CustomField>
    <fullName>HL_RM_Name__c</fullName>
    <label>HL RM Name</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Aashish Ghogale</fullName>
            </value>
            <value>
                <fullName>Apeksha Sathe</fullName>
            </value>
            <value>
                <fullName>Chandan Jaiswal</fullName>
            </value>
            <value>
                <fullName>Kunal Kate</fullName>
            </value>
            <value>
                <fullName>Raj Mandhana</fullName>
            </value>
            <value>
                <fullName>Shweta Yadav</fullName>
            </value>
            <value>
                <fullName>Supriya Khawle Khawle</fullName>
            </value>
            <value>
                <fullName>Ankit Verma</fullName>
            </value>
            <value>
                <fullName>Krishna Gupta</fullName>
            </value>
            <value>
                <fullName>Krishna Patil</fullName>
            </value>
            <value>
                <fullName>Shailesh Pandey</fullName>
            </value>
            <value>
                <fullName>Vinod Thakare</fullName>
            </value>
            <value>
                <fullName>Vinay Kumar</fullName>
            </value>
            <value>
                <fullName>Aarti Kocharekar</fullName>
                <isActive>false</isActive>
                <label>Aarti Kocharekar</label>
            </value>
            <value>
                <fullName>Ajay</fullName>
                <isActive>false</isActive>
                <label>Ajay</label>
            </value>
            <value>
                <fullName>Ajit Sharma</fullName>
                <isActive>false</isActive>
                <label>Ajit Sharma</label>
            </value>
            <value>
                <fullName>Anuja Parandkar</fullName>
                <isActive>false</isActive>
                <label>Anuja Parandkar</label>
            </value>
            <value>
                <fullName>Atul Malusare</fullName>
                <isActive>false</isActive>
                <label>Atul Malusare</label>
            </value>
            <value>
                <fullName>Chandan Patil</fullName>
                <isActive>false</isActive>
                <label>Chandan Patil</label>
            </value>
            <value>
                <fullName>Dashraj Modak</fullName>
                <isActive>false</isActive>
                <label>Dashraj Modak</label>
            </value>
            <value>
                <fullName>Labhanshi Srivastava</fullName>
                <isActive>false</isActive>
                <label>Labhanshi Srivastava</label>
            </value>
            <value>
                <fullName>Milind Kawle</fullName>
                <isActive>false</isActive>
                <label>Milind Kawle</label>
            </value>
            <value>
                <fullName>Prathamesh Gawane</fullName>
                <isActive>false</isActive>
                <label>Prathamesh Gawane</label>
            </value>
            <value>
                <fullName>Rohit Panjwani</fullName>
                <isActive>false</isActive>
                <label>Rohit Panjwani</label>
            </value>
            <value>
                <fullName>Sagar Pawar</fullName>
                <isActive>false</isActive>
                <label>Sagar Pawar</label>
            </value>
            <value>
                <fullName>Shyam Bhagat</fullName>
                <isActive>false</isActive>
                <label>Shyam Bhagat</label>
            </value>
            <value>
                <fullName>Sonali Mane</fullName>
                <isActive>false</isActive>
                <label>Sonali Mane</label>
            </value>
            <value>
                <fullName>Suhas Murage</fullName>
                <isActive>false</isActive>
                <label>Suhas Murage</label>
            </value>
            <value>
                <fullName>Vrushali Pardeshi</fullName>
                <isActive>false</isActive>
                <label>Vrushali Pardeshi</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>