force-app/main/default/objects/Loan__c/fields/HL_RM_Names__c.field-meta.xml
<CustomField>
    <fullName>HL_RM_Names__c</fullName>
    <formula>IF(TEXT(RW_First_Disbursement_Status__c) != &apos;Received&apos;, HL_RM__r.User__r.FirstName + &apos; &apos; + HL_RM__r.User__r.LastName,
 HL_RM__r.Disbursement_RM_User__r.FirstName + &apos; &apos; + 	HL_RM__r.Disbursement_RM_User__r.LastName		)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>HL RM Name</label>
    <type>Text</type>
</CustomField>