force-app/main/default/objects/Loan__c/fields/HL_Status__c.field-meta.xml
<CustomField>
    <fullName>HL_Status__c</fullName>
    <label>HL Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Customer yet to connect</fullName>
            </value>
            <value>
                <fullName>Customer non-contactable</fullName>
            </value>
            <value>
                <fullName>Documentation</fullName>
            </value>
            <value>
                <fullName>Subvention scheme</fullName>
            </value>
            <value>
                <fullName>Self- funding</fullName>
            </value>
            <value>
                <fullName>Funding type</fullName>
            </value>
            <value>
                <fullName>Sales dispute</fullName>
            </value>
            <value>
                <fullName>Under cancellation</fullName>
            </value>
            <value>
                <fullName>Login done with HFC</fullName>
            </value>
            <value>
                <fullName>Sanction received</fullName>
            </value>
            <value>
                <fullName>Decline of Sanction</fullName>
            </value>
            <value>
                <fullName>Documentation for disbursement</fullName>
            </value>
            <value>
                <fullName>Log in for disbursement</fullName>
            </value>
            <value>
                <fullName>Ready for Disbursement</fullName>
            </value>
            <value>
                <fullName>Documents with customer</fullName>
            </value>
            <value>
                <fullName>Loan Eligibility issues</fullName>
            </value>
            <value>
                <fullName>Agreement Received</fullName>
                <isActive>false</isActive>
                <label>Agreement Received</label>
            </value>
            <value>
                <fullName>Agreement with Customer</fullName>
                <isActive>false</isActive>
                <label>Agreement with Customer</label>
            </value>
            <value>
                <fullName>Awaiting Agreement</fullName>
                <isActive>false</isActive>
                <label>Awaiting Agreement</label>
            </value>
            <value>
                <fullName>Defaulter/Pre-Term Sent</fullName>
                <isActive>false</isActive>
                <label>Defaulter/Pre-Term Sent</label>
            </value>
            <value>
                <fullName>Disbursed</fullName>
                <isActive>false</isActive>
                <label>Disbursed</label>
            </value>
            <value>
                <fullName>Docket Submitted to Bank</fullName>
                <isActive>false</isActive>
                <label>Docket Submitted to Bank</label>
            </value>
            <value>
                <fullName>Docket with Customer</fullName>
                <isActive>false</isActive>
                <label>Docket with Customer</label>
            </value>
            <value>
                <fullName>Index II &amp; NOC Submitted</fullName>
                <isActive>false</isActive>
                <label>Index II &amp; NOC Submitted</label>
            </value>
            <value>
                <fullName>Pendency from Runwal</fullName>
                <isActive>false</isActive>
                <label>Pendency from Runwal</label>
            </value>
            <value>
                <fullName>Ready Docket in Office</fullName>
                <isActive>false</isActive>
                <label>Ready Docket in Office</label>
            </value>
            <value>
                <fullName>Ready Docket with CRM</fullName>
                <isActive>false</isActive>
                <label>Ready Docket with CRM</label>
            </value>
            <value>
                <fullName>Registration Awaited</fullName>
                <isActive>false</isActive>
                <label>Registration Awaited</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>