force-app/main/default/objects/Loan__c/fields/HL_Sub_Status__c.field-meta.xml
<CustomField>
    <fullName>HL_Sub_Status__c</fullName>
    <label>HL Sub Status</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>HL_Status__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Not reachable</fullName>
            </value>
            <value>
                <fullName>Not answering</fullName>
            </value>
            <value>
                <fullName>Documents to be received from customer</fullName>
            </value>
            <value>
                <fullName>Documents submitted</fullName>
            </value>
            <value>
                <fullName>Builders subvention</fullName>
            </value>
            <value>
                <fullName>Bank Subvention</fullName>
            </value>
            <value>
                <fullName>Yet to decide</fullName>
            </value>
            <value>
                <fullName>Customer opted self-funding</fullName>
            </value>
            <value>
                <fullName>Discounts</fullName>
            </value>
            <value>
                <fullName>Deviations</fullName>
            </value>
            <value>
                <fullName>Source type</fullName>
            </value>
            <value>
                <fullName>Financial/Income loss</fullName>
            </value>
            <value>
                <fullName>Medical</fullName>
            </value>
            <value>
                <fullName>Unit transfer</fullName>
            </value>
            <value>
                <fullName>Sanction in process</fullName>
            </value>
            <value>
                <fullName>Sanction on Hold</fullName>
            </value>
            <value>
                <fullName>Receipt of Sanction</fullName>
            </value>
            <value>
                <fullName>CIBIL Issues</fullName>
            </value>
            <value>
                <fullName>Eligibility issues</fullName>
            </value>
            <value>
                <fullName>Registered Agreement awaited</fullName>
            </value>
            <value>
                <fullName>Builder NOC pending</fullName>
            </value>
            <value>
                <fullName>Documents  with Bank</fullName>
            </value>
            <value>
                <fullName>OCR Pending</fullName>
            </value>
            <value>
                <fullName>TDS Pending</fullName>
            </value>
            <value>
                <fullName>ROC Pending</fullName>
            </value>
            <value>
                <fullName>Payment awaited from Bank</fullName>
            </value>
            <value>
                <fullName>Bank name</fullName>
            </value>
            <value>
                <fullName>Client visit to bank pending</fullName>
            </value>
            <value>
                <fullName>Customer nor responding</fullName>
            </value>
            <value>
                <fullName>Customer out of station</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>