force-app/main/default/objects/Loan__c/fields/HL_TL__c.field-meta.xml
<CustomField>
    <fullName>HL_TL__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>HL TL</label>
    <referenceTo>Home_Loan_RM__c</referenceTo>
    <relationshipLabel>Loans (HL TL)</relationshipLabel>
    <relationshipName>Loans1</relationshipName>
    <type>Lookup</type>
</CustomField>