force-app/main/default/objects/Loan__c/fields/HL_TL_Name__c.field-meta.xml
<CustomField>
    <fullName>HL_TL_Name__c</fullName>
    <label>HL TL Name</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Apeksha Sathe</fullName>
            </value>
            <value>
                <fullName>Ajit Sharma</fullName>
            </value>
            <value>
                <fullName>Shyam Bhagat</fullName>
            </value>
            <value>
                <fullName>Adrian Dsouza</fullName>
            </value>
            <value>
                <fullName>Chetan Pathare</fullName>
            </value>
            <value>
                <fullName>Rohit Panjwani</fullName>
            </value>
            <value>
                <fullName>Usha Ghadge</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>