force-app/main/default/objects/Loan__c/fields/HL_TL_Names__c.field-meta.xml
<CustomField>
    <fullName>HL_TL_Names__c</fullName>
    <formula>HL_RM__r.TL_User__r.FirstName + &apos; &apos; +  HL_RM__r.TL_User__r.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>HL TL Name</label>
    <type>Text</type>
</CustomField>