force-app/main/default/objects/Loan__c/fields/Home_Loan_Taken_From__c.field-meta.xml
<CustomField>
    <fullName>Home_Loan_Taken_From__c</fullName>
    <label>Home Loan Taken From</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Runwal</fullName>
                <default>true</default>
                <label>Runwal</label>
            </value>
            <value>
                <fullName>Direct</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>