force-app/main/default/objects/Loan__c/fields/Home_Loan_taken_from_sub_mode__c.field-meta.xml
<CustomField>
    <fullName>Home_Loan_taken_from_sub_mode__c</fullName>
    <description>As per Apeksha&apos;s email</description>
    <label>Home Loan taken from sub mode</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Home_Loan_Taken_From__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Channel Partner</fullName>
            </value>
            <value>
                <fullName>Friend is Banker</fullName>
            </value>
            <value>
                <fullName>Relative is Banker</fullName>
            </value>
            <value>
                <fullName>Existing Relationship Manager</fullName>
            </value>
            <value>
                <fullName>Direct Branch Visit</fullName>
            </value>
            <value>
                <fullName>Staff Loan</fullName>
            </value>
            <value>
                <fullName>Other Non Pannel Bank</fullName>
            </value>
            <value>
                <fullName>Online Application</fullName>
            </value>
            <value>
                <fullName>Pre Booking Sanction</fullName>
            </value>
            <value>
                <fullName>Self Broker</fullName>
            </value>
            <value>
                <fullName>Online DSA</fullName>
            </value>
            <value>
                <fullName>Out Station Customer</fullName>
            </value>
            <value>
                <fullName>Self Financial Adviser</fullName>
            </value>
            <value>
                <fullName>Self Banker</fullName>
            </value>
            <value>
                <fullName>Chartered Accountant (CA)</fullName>
            </value>
            <value>
                <fullName>Runwal-RREPL</fullName>
            </value>
            <value>
                <fullName>Chanda Runwal</fullName>
            </value>
            <value>
                <fullName>Runwal-Residency</fullName>
            </value>
            <value>
                <fullName>Ankush Runwal</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>