force-app/main/default/objects/Loan__c/fields/Last_Disbursement_Received__c.field-meta.xml
<CustomField>
    <fullName>Last_Disbursement_Received__c</fullName>
    <label>Last Disbursement Received</label>
    <summarizedField>Loan_Disbursement_Details__c.Disbursement_Date__c</summarizedField>
    <summaryForeignKey>Loan_Disbursement_Details__c.Loan__c</summaryForeignKey>
    <summaryOperation>max</summaryOperation>
    <type>Summary</type>
</CustomField>