force-app/main/default/objects/Loan__c/fields/Loan_Account_Number_As_Per_Bank__c.field-meta.xml
<CustomField>
    <fullName>Loan_Account_Number_As_Per_Bank__c</fullName>
    <label>Loan Account Number As Per Bank</label>
    <length>50</length>
    <type>Text</type>
</CustomField>