force-app/main/default/objects/Loan__c/fields/Loan_Ageing_Creation_to_Disbursement__c.field-meta.xml
<CustomField>
    <fullName>Loan_Ageing_Creation_to_Disbursement__c</fullName>
    <formula>RW_First_Disbursement_Date__c - DATEVALUE(CreatedDate)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Loan Ageing - Creation to Disbursement</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>