force-app/main/default/objects/Loan__c/fields/Loan_First_Disbursement_Pending_Days__c.field-meta.xml
<CustomField>
    <fullName>Loan_First_Disbursement_Pending_Days__c</fullName>
    <formula>IF(ISPICKVAL(RW_Loan_Record_Status__c, &apos;First Disbursement Received&apos;) , RW_First_Disbursement_Date__c - RW_NOC_Generated_Date__c , IF(ISPICKVAL(RW_Loan_Record_Status__c, &apos;NOC Generated&apos;), TODAY() - RW_NOC_Generated_Date__c, 0 ))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Loan First Disbursement Pending Days</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>