force-app/main/default/objects/Loan__c/fields/Loan_Record_Sub_Status__c.field-meta.xml
<CustomField>
    <fullName>Loan_Record_Sub_Status__c</fullName>
    <label>Loan Record Sub Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Eligibility issues</fullName>
            </value>
            <value>
                <fullName>CIBIL Issues</fullName>
            </value>
            <value>
                <fullName>Customer Not Providing Documents</fullName>
            </value>
            <value>
                <fullName>Partially Self-Funding</fullName>
            </value>
            <value>
                <fullName>Salary/Job/Financial Loss</fullName>
            </value>
            <value>
                <fullName>HL Disbursement Initiated</fullName>
            </value>
            <value>
                <fullName>Self-Funding</fullName>
            </value>
            <value>
                <fullName>Provisional NOC</fullName>
            </value>
            <value>
                <fullName>Bank Subvention</fullName>
                <isActive>false</isActive>
                <label>Bank Subvention</label>
            </value>
            <value>
                <fullName>Bank name</fullName>
                <isActive>false</isActive>
                <label>Bank name</label>
            </value>
            <value>
                <fullName>Builder NOC pending</fullName>
                <isActive>false</isActive>
                <label>Builder NOC pending</label>
            </value>
            <value>
                <fullName>Builders subvention</fullName>
                <isActive>false</isActive>
                <label>Builders subvention</label>
            </value>
            <value>
                <fullName>CIBIL issue</fullName>
                <isActive>false</isActive>
                <label>CIBIL issue</label>
            </value>
            <value>
                <fullName>Client visit to bank pending</fullName>
                <isActive>false</isActive>
                <label>Client visit to bank pending</label>
            </value>
            <value>
                <fullName>Customer nor responding</fullName>
                <isActive>false</isActive>
                <label>Customer nor responding</label>
            </value>
            <value>
                <fullName>Customer opted self-funding</fullName>
                <isActive>false</isActive>
                <label>Customer opted self-funding</label>
            </value>
            <value>
                <fullName>Customer out of station</fullName>
                <isActive>false</isActive>
                <label>Customer out of station</label>
            </value>
            <value>
                <fullName>Customer will submit the docs to bank</fullName>
                <isActive>false</isActive>
                <label>Customer will submit the docs to bank</label>
            </value>
            <value>
                <fullName>Deviations</fullName>
                <isActive>false</isActive>
                <label>Deviations</label>
            </value>
            <value>
                <fullName>Discounts</fullName>
                <isActive>false</isActive>
                <label>Discounts</label>
            </value>
            <value>
                <fullName>Documents  with Bank</fullName>
                <isActive>false</isActive>
                <label>Documents  with Bank</label>
            </value>
            <value>
                <fullName>Documents submitted</fullName>
                <isActive>false</isActive>
                <label>Documents submitted</label>
            </value>
            <value>
                <fullName>Documents to be received from</fullName>
                <isActive>false</isActive>
                <label>Documents to be received from</label>
            </value>
            <value>
                <fullName>Financial/Income loss</fullName>
                <isActive>false</isActive>
                <label>Financial/Income loss</label>
            </value>
            <value>
                <fullName>Income loss</fullName>
                <isActive>false</isActive>
                <label>Income loss</label>
            </value>
            <value>
                <fullName>Medical</fullName>
                <isActive>false</isActive>
                <label>Medical</label>
            </value>
            <value>
                <fullName>Non closure of other Loans</fullName>
                <isActive>false</isActive>
                <label>Non closure of other Loans</label>
            </value>
            <value>
                <fullName>Not answering</fullName>
                <isActive>false</isActive>
                <label>Not answering</label>
            </value>
            <value>
                <fullName>Not reachable</fullName>
                <isActive>false</isActive>
                <label>Not reachable</label>
            </value>
            <value>
                <fullName>OCR Pending</fullName>
                <isActive>false</isActive>
                <label>OCR Pending</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>