force-app/main/default/objects/Loan__c/fields/Loan_Sanction_Pending_Days__c.field-meta.xml
<CustomField>
    <fullName>Loan_Sanction_Pending_Days__c</fullName>
    <formula>IF(ISPICKVAL(RW_Loan_Record_Status__c, &apos;Loan Sanctioned&apos;) ,  RW_Sanction_Date__c -  DATEVALUE( CreatedDate ) , IF(ISPICKVAL(RW_Loan_Record_Status__c, &apos;Loan Process Initiated&apos;), Now() - CreatedDate, 0 ))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Loan Sanction Pending Days</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>